refactor: 建立后端 Query 能力模块